@@ -191,15 +191,15 @@ individually with the following values:
 
 =over
 
-=item C<audio>
+=item C<audio> - hardware-accelerated spatialised audio playback and recording
 
-=item C<graphics>
+=item C<graphics> - hardware acceleration of 2D graphics including sprites, polygons and text rendering
 
-=item C<network>
+=item C<network> - TCP and UDP network sockets, data encapsulation facilities, HTTP and FTP classes
 
-=item C<system>
+=item C<system> - vector and Unicode string classes, portable threading and timer facilities
 
-=item C<window>
+=item C<window> - window and input device management including support for joysticks, OpenGL context management
 
 =back
 
@@ -262,6 +262,13 @@ On a Debian based system, you'd try something like:
      sudo apt-get update
      sudo apt-get install libxrandr-dev libxcursor-dev libudev-dev libopenal-dev libflac-dev libvorbis-dev libgl1-mesa-dev libegl1-mesa-dev libdrm-dev libgbm-dev
 
+On FreeBSD, I tossed this into my Github Action and it works out
+alright:
+
+    env ASSUME_ALWAYS_YES=YES pkg install -y git cmake-core ninja xorgproto libX11 libXrandr
+    env ASSUME_ALWAYS_YES=YES pkg install -y flac libogg libvorbis freetype2 openal-soft libglvnd
+    env ASSUME_ALWAYS_YES=YES pkg install -y libXcursor
+
 =head1 See Also
 
 L<Alien::SFML|Alien::SFML>
@@ -284,8 +291,10 @@ this distribution or http://www.perlfoundation.org/artistic_license_2_0.  For
 clarification, see http://www.perlfoundation.org/artistic_2_0_notes.
 
 =for stopwords
-macOS freetype xrandr udev opengl
+macOS FreeBSD
+freetype xrandr udev opengl OpenGL
 flac ogg vorbis vorbisenc vorbisfile
 openal pthread
+spatialised
 
 =cut
