@@ -2,6 +2,8 @@ Revision history for Perl extension Alien-CSFML
 
 {{$NEXT}}
 
+  - Document dependencies on FreeBSD
+
 v0.0.1 2022-10-19T02:09:45Z
 
   - Hi, planet.
